##########################################################################

cmake_minimum_required(VERSION 2.8)

##########################################################################

add_subdirectory(AD7151 )
add_subdirectory(AS5600 )
add_subdirectory(BMG160 )
add_subdirectory(DRV2605)
add_subdirectory(INA220 )

##########################################################################
