##########################################################################

cmake_minimum_required(VERSION 2.8)

##########################################################################

add_subdirectory(hal-at90can32-digital-in-pin  )
add_subdirectory(hal-at90can32-digital-out-pin )

##########################################################################
