##########################################################################

cmake_minimum_required(VERSION 2.8)

##########################################################################

add_subdirectory(hal-at90can64-digital-in-pin  )
add_subdirectory(hal-at90can64-digital-out-pin )

##########################################################################
