##########################################################################

cmake_minimum_required(VERSION 2.8)

##########################################################################

add_subdirectory(hal-atmega32u4-digital-in-pin  )
add_subdirectory(hal-atmega32u4-digital-in-port )
add_subdirectory(hal-atmega32u4-digital-out-pin )
add_subdirectory(hal-atmega32u4-digital-out-port)

##########################################################################
