##########################################################################

cmake_minimum_required(VERSION 2.8)

##########################################################################

add_subdirectory(hal-at90can128-digital-in-pin  )
add_subdirectory(hal-at90can128-digital-in-port )
add_subdirectory(hal-at90can128-digital-out-pin )
add_subdirectory(hal-at90can128-digital-out-port)

##########################################################################
