##########################################################################

cmake_minimum_required(VERSION 2.8)

##########################################################################

add_subdirectory(hal-atmega2560-digital-in-pin  )
add_subdirectory(hal-atmega2560-digital-in-port )
add_subdirectory(hal-atmega2560-digital-out-pin )
add_subdirectory(hal-atmega2560-digital-out-port)

##########################################################################
