##########################################################################

cmake_minimum_required(VERSION 2.8)

##########################################################################

add_subdirectory(hal-atmega328p-analog-digital-converter)
add_subdirectory(hal-atmega328p-digital-in-pin          )
add_subdirectory(hal-atmega328p-digital-in-port         )
add_subdirectory(hal-atmega328p-digital-out-pin         )
add_subdirectory(hal-atmega328p-digital-out-port        )

##########################################################################
